<resources>
    <string name="retry">Retry</string>
    <string name="error_common">Something went wrong…</string>
    <string name="please_create_wallet">Please create your PKT Wallet. It is needed to launch the application.</string>
    <string name="create_new_wallet">Create New Wallet</string>
    <string name="recover_existing_wallet">Recover Existing Wallet</string>
    <string name="create_password">Create Password</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="good">Good</string>
    <string name="perfect">Perfect</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_password_checkbox_1">I understand that Anode cannot recover my password for me</string>
    <string name="create_password_checkbox_2">I consent to Anode\'s privacy policy and data collection</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="next">Next</string>
    <string name="error_passwords_do_not_match">Passwords doesn\'t match, try again</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="password_confirmation_description">Your password is required to recover your wallet. You must save your password in a safe place. If you lose your password, you\'ll lose access to your funds permanently.</string>
    <string name="i_wrote_password">I wrote down my password</string>
    <string name="set_pin">Set PIN</string>
    <string name="enter_pin">PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_description_1">The PIN code can be used for quick access and is secured with your phone\'s Hardware Security Module</string>
    <string name="pin_description_2">To protect your security, the PIN is revoked after 3 failed attempts</string>
    <string name="error_pins_do_not_match">Pins doesn\'t match, try again</string>
    <string name="your_seed_phrase">This is your seed phrase</string>
    <string name="seed_phrase_description">You must write this down and keep it in a safe place. You will need these words and your password if you ever need to recover your wallet. You will only see these words once.</string>
    <string name="seed_phrase_copied">Secret Seed Phrase copied</string>
    <string name="type_word">Type the %s word from the seed phrase</string>
    <string name="st">st</string>
    <string name="nd">nd</string>
    <string name="rd">rd</string>
    <string name="th">th</string>
    <string name="word">Word</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="error_word_incorrect">Wrong word. Can you try again?</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_description_1">You\'ve successfully set up your wallet. Remember to keep your seed phrase and password safe.</string>
    <string name="congratulations_description_2">Anode cannot recover your wallet if you lose your seed phrase or password. You can\'t find your password in settings, but you can change your password in settings.</string>
    <string name="go_to_your_wallet">Go to your wallet</string>
    <string name="recover_title">Enter your 15 word seed phrase and  the wallet password you created below</string>
    <string name="recover_wallet_warning">Due to memory limitations, mining wallets are not supported.</string>
    <string name="seed">Seed</string>
    <string name="password">Password</string>
    <string name="recover_wallet">Recover Wallet</string>
    <string name="vpn">VPN</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="block">Block:</string>
    <string name="my_wallet_address">My PKT Wallet address</string>
    <string name="my_vote">My vote</string>
    <string name="transactions">Transactions</string>
    <string name="select_period">Select period</string>
    <string name="received_pkt">Received PKT</string>
    <string name="sent_pkt">Sent PKT</string>
    <string name="sending_pkt_unconfirmed">Sending PKT (unconfirmed)</string>
    <string name="these_are_all_your_transactions">These are all your transactions</string>
    <string name="scroll_for_more_transactions">Scroll down to load more transactions</string>
    <string name="transactions_empty">There aren\'t any transactions on this address yet</string>
    <string name="change_password">Change Password</string>
    <string name="change_pin">Change PIN</string>
    <string name="show_seed">Show Seed</string>
    <string name="cjdns_info">Cjdns Info</string>
    <string name="wallet_info">Wallet Info</string>
    <string name="data_consent">Data Consent</string>
    <string name="id">ID:</string>
    <string name="version">Version:</string>
    <string name="check_for_update">Check for update</string>
    <string name="upgrade_from_pre_release">Upgrade from pre-release versions</string>
    <string name="show_inactive_servers">Show non active VPN Servers</string>
    <string name="rename">Rename</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="new_wallet">New Wallet</string>
    <string name="wallet_recovery">Wallet recovery</string>
    <string name="settings_taken">Settings taken %s ago, pull to refresh</string>
    <string name="address">Address</string>
    <string name="balance">Balance</string>
    <string name="wallet_sync">Wallet sync</string>
    <string name="neutrino_sync">Neutrino sync</string>
    <string name="connected_servers">Connected servers</string>
    <string name="sync">Sync:</string>
    <string name="details">Details</string>
    <string name="debug_logs">Debug Logs</string>
    <string name="logs_submitted">Logs submitted</string>
    <string name="logs_submitted_consent">Please consent for data posting first</string>
    <string name="app_version">App Version:</string>
    <string name="ipv4">IPv4:</string>
    <string name="internet_ipv6">Internet IPv6:</string>
    <string name="cjdns_ipv6">Cjdns IPv6:</string>
    <string name="cjdns_ip">Cjdns IP:</string>
    <string name="public_key">Public Key:</string>
    <string name="node_map">Node Map:</string>
    <string name="addr">Addr:</string>
    <string name="metric">Metric:</string>
    <string name="protocol">Protocol:</string>
    <string name="state">State:</string>
    <string name="find_your_self">Find Yourself on the map</string>
    <string name="username">Username:</string>
    <string name="vpn_exit_key">VPN exit key:</string>
    <string name="submit_logs">Submit Logs</string>
    <string name="peers">Peers</string>
    <string name="no_communication_yet">No communication yet</string>
    <string name="handshaking">Handshaking</string>
    <string name="established">Established</string>
    <string name="unresponsive">Unresponsive</string>
    <string name="unauthenticated">Unauthenticated</string>
    <string name="incompatible">Incompatible</string>
    <string name="ip">IP:</string>
    <string name="key">Key:</string>
    <string name="status">Status:</string>
    <string name="key_in">In:</string>
    <string name="out">Out:</string>
    <string name="loss">Loss:</string>
    <string name="noise">Noise</string>
    <string name="legacy">Legacy</string>
    <string name="connection">Connection</string>
    <string name="server">Server:</string>
    <string name="ipv6">IPv6</string>
    <string name="per_second">s</string>
    <string name="kb_per_second">Kb/s</string>
    <string name="kb">KB</string>
    <string name="mb">MB</string>
    <string name="logout">Log\nOut</string>
    <string name="enter_your_pin">Enter Your PIN</string>
    <string name="error_pin_incorrect">Incorrect PIN</string>
    <string name="error_password_incorrect">Incorrect Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="choose_wallet">Choose wallet</string>
    <string name="send_transaction">Send Transaction</string>
    <string name="max">Max</string>
    <string name="vote_candidate">Candidate</string>
    <string name="vote_for_address">Vote for address</string>
    <string name="vote_nobody">Withdraw vote</string>
    <string name="vote_withdrawn">Vote withdrawn</string>
    <string name="vote">Vote</string>
    <string name="amount">Amount</string>
    <string name="send_pkt">Send PKT</string>
    <string name="send_as_much_pkt_as_possible">Send as much PKT as possible</string>
    <string name="please_confirm_pin">Please confirm PIN</string>
    <string name="please_confirm_password">Please confirm Password</string>
    <string name="recipient_address">Recipient Address</string>
    <string name="pin">PIN</string>
    <string name="pkt_successfully_sent">PKT successfully sent</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="view_transaction">View Transaction</string>
    <string name="done">Done</string>
    <string name="transaction_id_copied">Transaction Id copied</string>
    <string name="premium_vpn_requesting">Requesting Premium. Please wait...</string>
    <string name="consent">Consent</string>
    <string name="choose_vpn">Choose VPN Service</string>
    <string name="consent_description">Technical data such as errors and crashes are automatically reported so that the development team can improve the app and diagnose problems. Private information such as passwords, keys, and browsing history is never shared. You may opt out of this but it will make technical support more difficult.</string>
    <string name="consent_opt_out">Opt out</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="vpn_exits">VPN Exits</string>
    <string name="search">Search</string>
    <string name="not_connected">Not connected</string>
    <string name="no_internet">No internet connection</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="connecting">Connecting</string>
    <string name="getting_routes">Getting routes</string>
    <string name="got_routes">Got routes</string>
    <string name="connected">Connected</string>
    <string name="connected_premium">Connected Premium</string>
    <string name="public_ipv4">Public IPv4: %s</string>
    <string name="public_ipv6">IPv6: %s</string>
    <string name="your_seed_phrase_2">Your seed phrase</string>
    <string name="you_seed_phrase_description">You need your 15 word seed phrase and your password to recover this wallet</string>
    <string name="copy">Copy</string>
    <string name="seed_phrase_copied_2">Seed phrase copied</string>
    <string name="rename_wallet">Rename Wallet</string>
    <string name="save">Save</string>
    <string name="premium">Premium</string>
    <string name="notification_premium_ended">Premium VPN has ended</string>
    <string name="free">Free</string>
    <string name="enter_current_wallet_password">Enter current wallet password</string>
    <string name="type_your_new_password">Type your new password</string>
    <string name="success">Success!</string>
    <string name="type_your_new_pin">Type your new PIN</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="delete_1">This will delete "%s”</string>
    <string name="delete_2">You will lose access to all funds on every address on this wallet</string>
    <string name="delete_3">You can recover the wallet using the seed phrase and password</string>
    <string name="enter_the_name_wallet_to_confirm">Enter the name wallet to confirm</string>
    <string name="i_know_this_is_not_reversible">I know this is not reversible</string>
    <string name="enter_with_password">Enter with password</string>
    <string name="enter_with_pin">Enter with PIN</string>
    <string name="qr_scan_code">QR Scan Code</string>
</resources>