<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded_top_20dp"
    android:backgroundTint="@color/bg3"
    android:paddingHorizontal="@dimen/spacing_horizontal"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_vpn"
        android:textAppearance="?textAppearance20SemiBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/vpnPaidButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/premium"
        app:layout_constraintEnd_toStartOf="@id/vpnFreeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/vpnFreeButton"
        style="@style/Widget.App.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/free"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vpnPaidButton"
        app:layout_constraintTop_toTopOf="@id/vpnPaidButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
