<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_horizontal"
        android:layout_marginTop="46dp"
        android:drawablePadding="24dp"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textAppearance="?textAppearance20SemiBold"
        app:drawableTopCompat="@drawable/ic_congratulations"
        app:layout_constraintBottom_toTopOf="@id/description1Label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/description1Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/congratulations_description_1"
        android:textAppearance="?textAppearance16Regular"
        app:layout_constraintBottom_toTopOf="@id/description2Label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLabel" />

    <TextView
        android:id="@+id/description2Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_horizontal"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/congratulations_description_2"
        android:textAppearance="?textAppearance16Regular"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description1Label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_button_margin_bottom"
        android:text="@string/go_to_your_wallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
